--- a/SLBr/App.xaml
+++ b/SLBr/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SLBr"
-             StartupUri="MainWindow.xaml" Startup="Application_Startup">
+             StartupUri="SplashScreen.xaml" Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
