--- a/SLBr/Resources/style.css
+++ b/SLBr/Resources/style.css
@@ -1,4 +1,24 @@
-﻿html {
+﻿[data-title]:hover:after {
+    opacity: 1;
+    transition: all 0.2s ease 0.6s;
+    visibility: visible;
+    font-family: 'Segoe UI Light', Tahoma, sans-serif;
+    font-size: 15px;
+}
+
+[data-title]:after {
+    content: attr(data-title);
+    position: absolute;
+    padding: 2.5px 5px;
+    color: black;
+    border-radius: 5px;
+    background: white;
+    visibility: hidden;
+    border: 1px solid gainsboro;
+    white-space: nowrap;
+}
+
+html {
     background: white;
 }
 
