--- a/SLBr/StyleResourceDictionary.xaml
+++ b/SLBr/StyleResourceDictionary.xaml
@@ -1,17 +1,31 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:SLBr.Controls"
+                    xmlns:local="clr-namespace:SLBr.Controls" xmlns:converters="clr-namespace:SLBr.Converters"
                     x:Class="SLBr.StyleResourceDictionaryCode">
 
-    <SolidColorBrush x:Key="BorderBrush" Color="Gainsboro"/>
+    <SolidColorBrush x:Key="BorderBrush" Color="{DynamicResource BorderBrushColor}"/>
+    <SolidColorBrush x:Key="PrimaryBrush" Color="{DynamicResource PrimaryBrushColor}"/>
+    <SolidColorBrush x:Key="UnselectedTabBrush" Color="{DynamicResource UnselectedTabBrushColor}"/>
+    <SolidColorBrush x:Key="FontBrush" Color="{DynamicResource FontBrushColor}"/>
+    <SolidColorBrush x:Key="ControlFontBrush" Color="{DynamicResource ControlFontBrushColor}"/>
+    <SolidColorBrush x:Key="_Blue" Color="{DynamicResource _BlueColor}"/>
+
+    <!--<SolidColorBrush x:Key="BorderBrush" Color="Gainsboro"/>
     <SolidColorBrush x:Key="PrimaryBrush" Color="White"/>
     <SolidColorBrush x:Key="UnselectedTabBrush" Color="WhiteSmoke"/>
     <SolidColorBrush x:Key="FontBrush" Color="Black"/>
     <SolidColorBrush x:Key="ControlFontBrush" Color="Gray"/>
-    <SolidColorBrush x:Key="_Blue" Color="#0092FF"/>
+    <SolidColorBrush x:Key="_Blue" Color="#0092FF"/>-->
+
+    <Color x:Key="BorderBrushColor">Gainsboro</Color>
+    <Color x:Key="PrimaryBrushColor">White</Color>
+    <Color x:Key="UnselectedTabBrushColor">WhiteSmoke</Color>
+    <Color x:Key="FontBrushColor">Black</Color>
+    <Color x:Key="ControlFontBrushColor">Gray</Color>
+    <Color x:Key="_BlueColor">#0092FF</Color>
 
     <Style TargetType="{x:Type ToolTip}" >
-        <Setter Property="OverridesDefaultStyle" Value="true" />
+        <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="HasDropShadow" Value="True" />
         <Setter Property="Foreground" Value="{DynamicResource FontBrush}" />
         <Setter Property="FontSize" Value="12" />
@@ -36,6 +50,20 @@
     <Style TargetType="{x:Type TextBlock}" >
         <Setter Property="Foreground" Value="{DynamicResource FontBrush}" />
     </Style>
+    <Style TargetType="{x:Type Label}" >
+        <Setter Property="Foreground" Value="{DynamicResource FontBrush}" />
+    </Style>
+
+    <converters:ColorToSolidConverter x:Key="ColorToSolidConverter" />
+    <converters:SolidToColorConverter x:Key="SolidToColorConverter" />
+
+    <!--<Color x:Key="BorderBrushColor">
+        <Binding Source="{StaticResource BorderBrush}" Converter="{StaticResource SolidToColorConverter}"/>
+    </Color>-->
+
+    <Storyboard x:Key="ToBorderBrushColor">
+        <ColorAnimation To="{StaticResource BorderBrushColor}" Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)" Duration="0:0:0.25"/>
+    </Storyboard>
 
     <Style TargetType="{x:Type Button}">
         <Setter Property="Background" Value="Transparent"/>
@@ -56,6 +84,106 @@
                             <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{DynamicResource BorderBrush}"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
+                            <!--<Trigger.EnterActions>
+                                <BeginStoryboard Storyboard="{StaticResource ToBorderBrushColor}"/>
+                            </Trigger.EnterActions>-->
+                            <Setter Property="Background" Value="{DynamicResource BorderBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true">
+                            <Setter Property="Background" Value="Transparent"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="CloseButton" TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Foreground" Value="{DynamicResource FontBrush}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="1"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true" CornerRadius="10">
+                        <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{DynamicResource BorderBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="Background" Value="{DynamicResource PrimaryBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true">
+                            <Setter Property="Background" Value="Transparent"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="InspectorButton" TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="DarkGray"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="1"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true" CornerRadius="2.5">
+                        <ContentPresenter TextBlock.Foreground="{TemplateBinding Foreground}" x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{DynamicResource BorderBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <!--<Trigger.EnterActions>
+                                <BeginStoryboard Storyboard="{StaticResource ToBorderBrushColor}"/>
+                            </Trigger.EnterActions>-->
+                            <Setter Property="Foreground" Value="{DynamicResource FontBrush}"/>
+                            <Setter Property="Background" Value="{DynamicResource BorderBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true">
+                            <Setter Property="Background" Value="Transparent"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="InspectorCloseButton" TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="DarkGray"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="1"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true" CornerRadius="2.5">
+                        <ContentPresenter TextBlock.Foreground="{TemplateBinding Foreground}" x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{DynamicResource BorderBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <!--<Trigger.EnterActions>
+                                <BeginStoryboard Storyboard="{StaticResource ToBorderBrushColor}"/>
+                            </Trigger.EnterActions>-->
+                            <Setter Property="Foreground" Value="Red"/>
                             <Setter Property="Background" Value="{DynamicResource BorderBrush}"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
@@ -107,17 +235,20 @@
             <Setter.Value>
                 <ControlTemplate TargetType="TabItem">
                     <Border Name="Border" BorderThickness="1,1,1,0" BorderBrush="{DynamicResource BorderBrush}" CornerRadius="5,5,0,0" Margin="0">
-                        <StackPanel Orientation="Horizontal">
-                            <Button x:Name="CloseTabButton" FontFamily="Segoe MDL2 Assets" FontSize="7.5" Content="&#xE711;" Click="ButtonAction" Tag="5" Width="20" Height="20" Margin="5,0,0,0"/>
-                            <Image RenderOptions.BitmapScalingMode="LowQuality" MaxHeight="15" MaxWidth="15" Stretch="Uniform" Margin="2.5,0" Source ="{Binding Icon}" x:Name="Icon"/>
-                            <ContentPresenter TextBlock.Foreground="{DynamicResource FontBrush}" Margin="2.5,5,2.5,5" x:Name="ContentSite" ContentSource="Header" VerticalAlignment="Center" HorizontalAlignment="Center" MaxWidth="175" TextBlock.FontFamily="None">
-                                <ContentPresenter.Resources>
-                                    <Style TargetType="TextBlock">
-                                        <Setter Property="TextWrapping" Value="NoWrap"/>
-                                        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-                                    </Style>
-                                </ContentPresenter.Resources>
-                            </ContentPresenter>
+                        <StackPanel Name="BorderContent" Orientation="Horizontal" Margin="2.5,2,2.5,2">
+                            <Button x:Name="CloseTabButton" FontFamily="Segoe MDL2 Assets" FontSize="7.5" Content="&#xE711;" Click="ButtonAction" Tag="{Binding Action}" Width="20" Height="20" Margin="0,0,2.5,0"/>
+                            <Image VerticalAlignment="Center" ImageFailed="Image_ImageFailed" Tag="{Binding Id}" RenderOptions.BitmapScalingMode="LowQuality" MaxHeight="15" MaxWidth="15" Stretch="Uniform" Margin="0" Source="{Binding Icon}" x:Name="Icon" />
+                            <DockPanel HorizontalAlignment="Left" Margin="2.5,0,0,0">
+                                <ContentPresenter TextBlock.Foreground="{DynamicResource FontBrush}" Margin="0" x:Name="ContentSite" ContentSource="Header" VerticalAlignment="Center" HorizontalAlignment="Center" MaxWidth="175" TextBlock.FontFamily="None">
+                                    <ContentPresenter.Resources>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="TextWrapping" Value="NoWrap"/>
+                                            <Setter Property="TextTrimming" Value="None"/>
+                                            <!--CharacterEllipsis-->
+                                        </Style>
+                                    </ContentPresenter.Resources>
+                                </ContentPresenter>
+                            </DockPanel>
                             <Grid x:Name="RightPadding" Margin="0,0,5,0"/>
                         </StackPanel>
                     </Border>
@@ -125,13 +256,14 @@
                         <Trigger Property="IsSelected" Value="True">
                             <Setter TargetName="Border" Property="Background" Value="{DynamicResource PrimaryBrush}"/>
                             <Setter TargetName="Border" Property="Margin" Value="0,0,0,-1"/>
-                            <Setter TargetName="CloseTabButton" Property="Visibility" Value="Visible"/>
-                            <Setter TargetName="Icon" Property="Margin" Value="2.5,0"/>
+                            <Setter TargetName="BorderContent" Property="Margin" Value="2.5,2,2.5,3"/>
+                            <!--<Setter TargetName="CloseTabButton" Property="Visibility" Value="Visible"/>-->
+                            <!--<Setter TargetName="Icon" Property="Margin" Value="2.5,0"/>-->
                         </Trigger>
                         <Trigger Property="IsSelected" Value="False">
                             <Setter TargetName="Border" Property="Background" Value="{DynamicResource UnselectedTabBrush}"/>
-                            <Setter TargetName="CloseTabButton" Property="Visibility" Value="Collapsed"/>
-                            <Setter TargetName="Icon" Property="Margin" Value="5,0,2.5,0"/>
+                            <!--<Setter TargetName="CloseTabButton" Property="Visibility" Value="Collapsed"/>-->
+                            <!--<Setter TargetName="Icon" Property="Margin" Value="2.5,0,2.5,0"/>-->
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
@@ -139,6 +271,9 @@
                                 <Condition Property="IsSelected" Value="False"/>
                             </MultiTrigger.Conditions>
                             <Setter TargetName="Border" Property="Background" Value="{DynamicResource BorderBrush}"/>
+                            <Setter TargetName="CloseTabButton" Property="Style" Value="{StaticResource CloseButton}"/>
+                            <!--<Setter TargetName="CloseTabButton" Property="Visibility" Value="Visible"/>-->
+                            <!--<Setter TargetName="CloseTabButton" Property="Background" Value="{DynamicResource UnselectedTabBrush}"/>-->
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
